[package]
name = "RusselCache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
block-modes = "0.9.1"
hex = "0.4"
local-ip-address = "0.6.1"
notify-rust = "4.5.1"
winapi = { version = "0.3.9", features = ["lmaccess"] }
windows-service = "0.7"
actix-web = "4.0"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.38.0"