[package]
name = "russel"
version = "0.1.0"
edition = "2021"
build = "build.rs"




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = "0.52.0"
winapi = { version = "0.3.9", features = ["lmaccess","winuser","processenv","winnt","winsvc","errhandlingapi", "winerror","shellapi"] }
windows-service = "0.7"
actix-web = "4.0"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.38.0"